// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-remark-podcast-timestamp adds id to a markdown header 1`] = `
Object {
  "children": Array [
    Object {
      "children": undefined,
      "type": "html",
      "value": "<a href=\\"#t=00:00\\"><span class=\\"timestamp\\">00:00 🕐</span></a>",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Henry",
            },
          ],
          "type": "strong",
        },
        Object {
          "type": "text",
          "value": ": Hi.",
        },
      ],
      "data": Object {
        "hName": "span",
        "hProperties": Object {
          "className": Array [
            "text",
          ],
        },
      },
      "type": "paragraph",
    },
  ],
  "data": Object {
    "hProperties": Object {
      "className": Array [
        "wrap",
        "right",
      ],
    },
  },
  "type": "paragraph",
}
`;

exports[`gatsby-remark-podcast-timestamp adds id to a markdown header 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "Henry",
        },
      ],
      "type": "strong",
    },
    Object {
      "type": "text",
      "value": ": Hi.",
    },
  ],
  "data": Object {
    "hName": "span",
    "hProperties": Object {
      "className": Array [
        "text",
      ],
    },
  },
  "type": "paragraph",
}
`;

exports[`gatsby-remark-podcast-timestamp doesn't affect normal paragraphs or use of link references 1`] = `
Object {
  "children": Array [
    Object {
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 1,
          "offset": 3,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "text",
      "value": "hi ",
    },
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
            "indent": Array [],
            "start": Object {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "type": "text",
          "value": "asdf",
        },
      ],
      "identifier": "asdf",
      "label": "asdf",
      "position": Position {
        "end": Object {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
        "indent": Array [],
        "start": Object {
          "column": 4,
          "line": 1,
          "offset": 3,
        },
      },
      "referenceType": "shortcut",
      "type": "linkReference",
    },
  ],
  "position": Position {
    "end": Object {
      "column": 10,
      "line": 1,
      "offset": 9,
    },
    "indent": Array [],
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "paragraph",
}
`;
